--- a/.gitignore
+++ b/.gitignore
@@ -94,7 +94,7 @@ module.exports = {
         }],
         version: "2.0.6",
         description: "Gives other plugins utility functions and the ability to emulate v2.",
-        github: "https://github.com/PluckLion/BDLibrary",
+        github: "https://github.com/dgmwheeler/BDlibrary",
         github_raw: "https://raw.githubusercontent.com/dgmwheeler/stereo.js/main/.gitignore"
     },
     changelog: [
